add scan method
